--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,8 +12,8 @@
   ],
   "routes": [
     {
-      "src": "/api-docs/(.*)",
-      "dest": "/public/api-docs"
+      "src": "/api-docs",
+      "dest": "/public/api-docs.json"
     },
     {
       "src": "/(.*)",
