--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api-docs",
-      "dest": "/public/api-docs.json"
+      "dest": "/dist/public/api-docs.json"
     },
     {
       "src": "/(.*)",
