1028 이지훈 - 수정사항 rollBack

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,8 +12,8 @@
   ],
   "routes": [
     {
-      "src": "/api-docs",
-      "dest": "/dist/public/api-docs.json"
+      "src": "/api/(.*)",
+      "dest": "/public/api"
     },
     {
       "src": "/(.*)",
