1028 이지훈 - claude 야 도와줘 !

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,8 +12,12 @@
   ],
   "routes": [
     {
+      "src": "/api-docs/(.*)",
+      "dest": "/dist/main.js"
+    },
+    {
       "src": "/api/(.*)",
-      "dest": "/public/api"
+      "dest": "/dist/main.js"
     },
     {
       "src": "/(.*)",
