1028 이지훈 - vercel.json 수정

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api-docs/(.*)",
-      "dest": "/dist/main.js"
+      "dest": "/dist/$1"
     },
     {
       "src": "/api/(.*)",
