--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -13,11 +13,7 @@
   "routes": [
     {
       "src": "/api-docs/(.*)",
-      "dest": "/dist/$1"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/dist/main.js"
+      "dest": "/backend/public/$1"
     },
     {
       "src": "/(.*)",
