--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api-docs/(.*)",
-      "dest": "/backend/public/$1"
+      "dest": "/backend/dist/public/$1"
     },
     {
       "src": "/(.*)",
