1031 이지훈 - swagger ui 야 뭐가 문제냐 대체

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api-docs/(.*)",
-      "dest": "/backend/dist/public/$1"
+      "dest": "/backend/dist/public/api-docs/$1"
     },
     {
       "src": "/(.*)",
