--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -13,7 +13,10 @@
   "routes": [
     {
       "src": "/api-docs/(.*)",
-      "dest": "/backend/dist/public/api-docs/$1"
+      "dest": "/backend/dist/public/api-docs/$1",
+      "headers": {
+        "cache-control": "no-store"
+      }
     },
     {
       "src": "/(.*)",
