--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,12 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/main.js",
+      "src": "backend/dist/main.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -20,7 +16,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/dist/main.js"
+      "dest": "/backend/dist/main.js"
     }
   ]
 }
