1031 이지훈 - 배포 및 빌드 스크립트 설정 수정완료

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prebuild": "if not exist dist\\public mkdir dist\\public",
     "build": "nest build",
+    "postbuild": "xcopy /E /I /Y node_modules\\swagger-ui-dist\\* dist\\public\\",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
