--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,26 +4,26 @@
     {
       "src": "dist/main.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/public/(.*)",
+      "dest": "/public/$1",
+      "headers": {
+        "cache-control": "public, max-age=0, must-revalidate"
+      }
+    },
     {
       "src": "/api-docs",
       "dest": "dist/main.js"
     },
     {
       "src": "/api-docs/(.*)",
-      "dest": "dist/main.js",
-      "headers": {
-        "cache-control": "public, max-age=0, must-revalidate"
-      }
-    },
-    {
-      "src": "/swagger-ui-bundle.js",
-      "dest": "dist/main.js"
-    },
-    {
-      "src": "/swagger-ui.css",
       "dest": "dist/main.js"
     },
     {
