--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
     "mysql2": "^3.11.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -45,7 +47,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.7",
