--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/main.js",
+      "src": "src/main.ts",
       "use": "@vercel/node",
       "config": {
         "maxLambdaSize": "50mb"
@@ -12,26 +12,26 @@
   "routes": [
     {
       "src": "/api-docs",
-      "dest": "dist/main.js"
+      "dest": "/src/main.ts"
     },
     {
       "src": "/api-docs/(.*)",
-      "dest": "dist/main.js"
+      "dest": "/src/main.ts"
     },
     {
       "src": "/api/(.*)",
-      "dest": "dist/main.js"
+      "dest": "/src/main.ts"
     },
     {
       "src": "/(.*)",
-      "dest": "dist/main.js"
+      "dest": "/src/main.ts"
     }
   ],
   "env": {
     "NODE_ENV": "production"
   },
   "functions": {
-    "dist/main.js": {
+    "src/main.ts": {
       "memory": 1024,
       "maxDuration": 10
     }
